draft-baker-v6ops-greynet-04

--- a/draft-baker-v6ops-greynet-04.html
+++ b/draft-baker-v6ops-greynet-04.html
@@ -153,12 +153,12 @@
 <tr><td class="header">IPv6 Operations</td><td class="header">F. Baker</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco Systems</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">W. Harrop</td></tr>
-<tr><td class="header">Expires: December 21, 2010</td><td class="header">G. Armitage</td></tr>
+<tr><td class="header">Expires: January 6, 2011</td><td class="header">G. Armitage</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">CAIA, Swinburne University of</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Technology</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 19, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">July 5, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />IPv4 and IPv6 Greynets<br />draft-baker-v6ops-greynet-03</h1>
+<h1><br />IPv4 and IPv6 Greynets<br />draft-baker-v6ops-greynet-04</h1>
 
 <h3>Abstract</h3>
 
@@ -180,7 +180,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 21, 2010.</p>
+This Internet-Draft will expire on January 6, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -499,9 +499,9 @@ Acknowledgements</h3>
       issues may be relevant to IPv6 in the future, when IPv6 is a more
       interesting target.
 </p>
-<p>Tim Chown tested the proposal, and made useful comments that have
-      been incorporated in this text. His fundamental comment was, however,
-      that "it works".
+<p>Tim Chown and Owen Stephens tested the proposal, and made useful
+      comments that have been incorporated in this text. His fundamental
+      comment was, however, that "it works".
 </p>
 <a name="rfc.references"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
