draft-ietf-dime-capablities-update-06

--- a/draft-ietf-dime-capablities-update-06.html
+++ b/draft-ietf-dime-capablities-update-06.html
@@ -153,10 +153,10 @@
 <tr><td class="header">Network Working Group</td><td class="header">K. Jiao</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Huawei</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">G. Zorn</td></tr>
-<tr><td class="header">Expires: December 20, 2010</td><td class="header">Network Zen</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 18, 2010</td></tr>
+<tr><td class="header">Expires: April 15, 2011</td><td class="header">Network Zen</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">October 12, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />The Diameter Capabilities Update Application<br />draft-ietf-dime-capablities-update-05</h1>
+<h1><br />The Diameter Capabilities Update Application<br />draft-ietf-dime-capablities-update-06</h1>
 
 <h3>Abstract</h3>
 
@@ -183,7 +183,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 20, 2010.</p>
+This Internet-Draft will expire on April 15, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -246,7 +246,7 @@ Introduction</h3>
 
 <p>
 				Capabilities exchange is an important component of the Diameter Base
-				Protocol <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; June&nbsp;2010.</span><span>)</span></a>,
+				Protocol <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>,
 				allowing peers to exchange identities and
 				Diameter capabilities (protocol version number, supported Diameter
 				applications, security mechanisms, etc.).  
@@ -303,8 +303,8 @@ Diameter Protocol Considerations</h3>
 				Diameter
 				nodes conforming to this specification MUST advertise support by
 				including the value &lt;TBD1&gt; in the Auth-Application-Id of the
-				Capabilities-Exchange-Request and Capabilities-Exchange-Answer commands 
-				<a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; June&nbsp;2010.</span><span>)</span></a>.
+				Capabilities-Exchange-Request (CER) and Capabilities-Exchange-Answer (CEA) commands 
+				<a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>.
 			
 </p>
 <a name="anchor3"></a><br /><hr />
@@ -326,9 +326,9 @@ Capabilities Update</h3>
 <br />
 
 				A Diameter node only issues a given command to those peers that have advertised
-				support for the Diameter application that defines the command.
-				A Diameter node MUST cache the supported applications in order to
-				ensure that unrecognized commands and/or AVPs are not unnecessarily
+				support for the Diameter application that defines the command;
+				a Diameter node must cache the supported applications in order to
+				ensure that unrecognized commands and/or Attibute-Value Pairs (AVPs) are not unnecessarily
 				sent to a peer.
 				<br />
 <br />
@@ -351,12 +351,12 @@ Capabilities Update</h3>
 				layer connection; however, if active sessions are using the
 				connection, peers MAY delay disconnection until the sessions can be
 				redirected or gracefully terminated.  Note that receiving a 
-				CUA from a peer advertising itself as a Relay (see <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; June&nbsp;2010.</span><span>)</span></a>, 
+				CUA from a peer advertising itself as a Relay (see <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>, 
 				Section	2.4) MUST be interpreted as having common applications with the peer.
 				<br />
 <br />
 
-				The CUR and CUA messages MUST NOT be proxied, redirected or relayed.
+				As for CER/CEA messages, the CUR and CUA messages MUST NOT be proxied, redirected or relayed.
 				<br />
 <br />
 
@@ -376,7 +376,7 @@ Capabilities Update</h3>
 Command-Code Values</h3>
 
 <p>
-					This section defines Command-Code <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; June&nbsp;2010.</span><span>)</span></a>
+					This section defines Command-Code <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>
 					values that MUST be
 					supported by all Diameter implementations conforming to this
 					specification.
@@ -399,10 +399,9 @@ Capabilities-Update-Request</h3>
 						<br />
 <br />
 
-						When Diameter is run over SCTP <a class='info' href='#RFC4960'>[RFC4960]<span> (</span><span class='info'>Stewart, R., &ldquo;Stream Control Transmission Protocol,&rdquo; September&nbsp;2007.</span><span>)</span></a>, 
+						When Diameter is run over the Stream Control Transmission Protocol <a class='info' href='#RFC4960'>[RFC4960]<span> (</span><span class='info'>Stewart, R., &ldquo;Stream Control Transmission Protocol,&rdquo; September&nbsp;2007.</span><span>)</span></a>, 
 						which allows connections to
-						span multiple interfaces and multiple IP addresses, the Capabilities-
-						Update-Request message MUST contain one Host-IP-Address AVP for each
+						span multiple interfaces and multiple IP addresses, the Capabilities-Update-Request message MUST contain one Host-IP-Address AVP for each
 						potential IP address that may be locally used when transmitting
 						Diameter messages.
 </p>
@@ -455,7 +454,7 @@ Message Format
 Security Considerations</h3>
 
 <p>
-				The security considerations applicable to the Diameter Base Protocol <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; June&nbsp;2010.</span><span>)</span></a>
+				The security considerations applicable to the Diameter Base Protocol <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>
 				are also applicable to this document.
 			
 </p>
@@ -476,7 +475,7 @@ Application Identifier</h3>
 
 <p>
 					This specification assigns the value &lt;TBD1&gt; from the Application
-					Identifiers namespace defined in RFC 3588.  See <a class='info' href='#DPC'>Section&nbsp;3<span> (</span><span class='info'>Diameter Protocol Considerations</span><span>)</span></a>
+					Identifiers namespace <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>.  See <a class='info' href='#DPC'>Section&nbsp;3<span> (</span><span class='info'>Diameter Protocol Considerations</span><span>)</span></a>
 					for the assignment of the namespace in this specification.
 				
 </p>
@@ -487,7 +486,7 @@ Command Codes</h3>
 
 <p>
 					This specification assigns the values &lt;TBD2&gt; and &lt;TBD3&gt; from the
-					Command Codes namespace defined in RFC 3588.  See <a class='info' href='#C-CV'>Section&nbsp;4.1<span> (</span><span class='info'>Command-Code Values</span><span>)</span></a>
+					Command Codes namespace <a class='info' href='#I-D.ietf-dime-rfc3588bis'>[I&#8209;D.ietf&#8209;dime&#8209;rfc3588bis]<span> (</span><span class='info'>Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2010.</span><span>)</span></a>.  See <a class='info' href='#C-CV'>Section&nbsp;4.1<span> (</span><span class='info'>Command-Code Values</span><span>)</span></a>
 					for the assignment of the namespace in this specification.
 				
 </p>
@@ -507,7 +506,7 @@ Acknowledgements</h3>
 
 <p>
 				Thanks to Sebastien Decugis, Niklas Neumann, 
-				Subash Comerica, Lionel Morand and Ravi for helpful discussion.
+				Subash Comerica, Lionel Morand, Dan Romascanu, Dan Harkins and Ravi for helpful review and discussion.
 			
 </p>
 <a name="rfc.references"></a><br /><hr />
@@ -520,7 +519,7 @@ References</h3>
 <h3>9.1.&nbsp;Normative References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-dime-rfc3588bis">[I-D.ietf-dime-rfc3588bis]</a></td>
-<td class="author-text">Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-dime-rfc3588bis-21.txt">Diameter Base Protocol</a>,&rdquo; draft-ietf-dime-rfc3588bis-21 (work in progress), June&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-dime-rfc3588bis-21.txt">TXT</a>).</td></tr>
+<td class="author-text">Fajardo, V., Arkko, J., Loughney, J., and G. Zorn, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-dime-rfc3588bis-25.txt">Diameter Base Protocol</a>,&rdquo; draft-ietf-dime-rfc3588bis-25 (work in progress), September&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-dime-rfc3588bis-25.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
 <td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="http://www.rfc-editor.org/rfc/rfc2119.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2119.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2119.xml">XML</a>).</td></tr>
 </table>
@@ -559,13 +558,13 @@ References</h3>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Network Zen</td></tr>
 <tr><td class="author-text">&nbsp;</td>
-<td class="author-text">1463 East Republican Street</td></tr>
+<td class="author-text">227/358 Thanon Sanphawut</td></tr>
 <tr><td class="author-text">&nbsp;</td>
-<td class="author-text">#358</td></tr>
+<td class="author-text">Bang Na, Bangkok  10260</td></tr>
 <tr><td class="author-text">&nbsp;</td>
-<td class="author-text">Seattle, WA  98112</td></tr>
-<tr><td class="author-text">&nbsp;</td>
-<td class="author-text">USA</td></tr>
+<td class="author-text">Thailand</td></tr>
+<tr><td class="author" align="right">Phone:&nbsp;</td>
+<td class="author-text">+66 (0) 87-040-4617</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:gwz@net-zen.net">gwz@net-zen.net</a></td></tr>
 </table>
