draft-livingood-woundy-congestion-mgmt-08

--- a/draft-livingood-woundy-congestion-mgmt-08.html
+++ b/draft-livingood-woundy-congestion-mgmt-08.html
@@ -154,12 +154,12 @@
 <tr><td class="header">Internet Engineering Task Force</td><td class="header">C. Bastian</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">T. Klieber</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">J. Livingood, Ed.</td></tr>
-<tr><td class="header">Expires: February 16, 2011</td><td class="header">J. Mills</td></tr>
+<tr><td class="header">Expires: February 25, 2011</td><td class="header">J. Mills</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">R. Woundy</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Comcast</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">August 15, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">August 24, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Comcast's Protocol-Agnostic Congestion Management System<br />draft-livingood-woundy-congestion-mgmt-07</h1>
+<h1><br />Comcast's Protocol-Agnostic Congestion Management System<br />draft-livingood-woundy-congestion-mgmt-08</h1>
 
 <h3>Abstract</h3>
 
@@ -180,7 +180,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on February 16, 2011.</p>
+This Internet-Draft will expire on February 25, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -320,7 +320,7 @@ Comcast High Speed Internet (HSI)</h3>
 <a name="rfc.section.3.7"></a><h3>3.7.&nbsp;
 Customer Premise Equipment (CPE)</h3>
 
-<p>Any device that resides at the customer's residence.
+<p>Any device that resides at the customer's residence, connected to the Comcast network, whether controlled by Comcast or not.
 </p>
 <a name="anchor9"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -813,6 +813,8 @@ Change Log</h3>
 <p>
         	</p>
 <ul class="text">
+<li>-08 - expanded definition of CPE in 3.7 to address an IESG comment from David Harrington
+</li>
 <li>-07 - fixed nits identified by Pete McCann in the gen-art review
 </li>
 <li>-06 - fixed nits identified by Lars Eggert and addressed concerns raised by Tero Kivinen in the security review
