draft-ohye-canonical-link-relation-04

--- a/draft-ohye-canonical-link-relation-04.html
+++ b/draft-ohye-canonical-link-relation-04.html
@@ -404,7 +404,7 @@
   </table>
 
   <p class="title">The Canonical Link Relation<br />
-  <span class="filename">draft-ohye-canonical-link-relation-03</span></p>
+  <span class="filename">draft-ohye-canonical-link-relation-04</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p><a href="#RFC5988">[RFC5988]</a> specified a way to define relationships between links on the web. This document describes a new type of such relationship, "canonical," which designates the preferred URI from a set of identical or vastly similar ones.</p>
@@ -494,7 +494,7 @@
 <p></p>
 
 <ol>
-<li>The content of the context URI is identical with, similar to, or a subset of the content of the canonical."</li>
+<li>The content of the context URI is identical with, similar to, or a subset of the content of the canonical.</li>
 <li>For HTTP, Permanent HTTP redirects (Section 10.3.2 of <a href="#RFC2616">[RFC2616]</a>), the traditional strong indicator that a URI's content has been permanently moved, could not be implemented in place of the canonical link relation.</li>
 <li>In the case where the canonical target is a superset of content from the context URI (e.g. page1 or page2 to view-all), that the user experience is strongly taken into consideration, both in regard to possible increased load time and potential complexity in navigation.</li>
 </ol>
