draft-ietf-xmpp-address-09

--- a/draft-ietf-xmpp-address-09.html
+++ b/draft-ietf-xmpp-address-09.html
@@ -153,11 +153,11 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">XMPP</td><td class="header">P. Saint-Andre</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco</td></tr>
-<tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc3920'>3920</a> (if&nbsp;approved)</td><td class="header">December 10, 2010</td></tr>
+<tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc3920'>3920</a> (if&nbsp;approved)</td><td class="header">January 6, 2011</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">&nbsp;</td></tr>
-<tr><td class="header">Expires: June 13, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Expires: July 10, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />Extensible Messaging and Presence Protocol (XMPP): Address Format<br />draft-ietf-xmpp-address-08</h1>
+<h1><br />Extensible Messaging and Presence Protocol (XMPP): Address Format<br />draft-ietf-xmpp-address-09</h1>
 
 <h3>Abstract</h3>
 
@@ -178,11 +178,11 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on June 13, 2011.</p>
+This Internet-Draft will expire on July 10, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2010 IETF Trust and the persons identified as the
+Copyright (c) 2011 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
@@ -294,9 +294,9 @@ Overview</h3>
 </p>
 <p>As specified in RFC 3920, the XMPP address format re-uses the "stringprep" technology for preparation of non-ASCII characters <a class='info' href='#STRINGPREP'>[STRINGPREP]<span> (</span><span class='info'>Hoffman, P. and M. Blanchet, &ldquo;Preparation of Internationalized Strings (&quot;stringprep&quot;),&rdquo; December&nbsp;2002.</span><span>)</span></a>, including the Nameprep profile for internationalized domain names as specified in <a class='info' href='#NAMEPREP'>[NAMEPREP]<span> (</span><span class='info'>Hoffman, P. and M. Blanchet, &ldquo;Nameprep: A Stringprep Profile for Internationalized Domain Names (IDN),&rdquo; March&nbsp;2003.</span><span>)</span></a> and <a class='info' href='#IDNA2003'>[IDNA2003]<span> (</span><span class='info'>Faltstrom, P., Hoffman, P., and A. Costello, &ldquo;Internationalizing Domain Names in Applications (IDNA),&rdquo; March&nbsp;2003.</span><span>)</span></a> along with two XMPP-specific profiles for the localpart and resourcepart.
 </p>
-<p>Since the publication of RFC 3920, IDNA2003 has been superseded by IDNA2008 (see <a class='info' href='#IDNA-PROTO'>[IDNA&#8209;PROTO]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names in Applications (IDNA): Protocol,&rdquo; August&nbsp;2010.</span><span>)</span></a> and related documents), which is not based on stringprep.  Following the lead of the IDNA community, other technology communities that use stringprep have begun discussions about migrating away from stringprep toward more "modern" approaches.  The XMPP community is participating in those discussions in order to find a replacement for the Nodeprep and Resourceprep profiles of stringprep defined in RFC 3920.  However, work on updated handling of internationalized addresses is currently in progress within the PRECIS Working Group and at the time of this writing it seems that such work might take several years to complete.  Because all other aspects of revised documentation for XMPP have been incorporated into <a class='info' href='#XMPP'>[XMPP]<span> (</span><span class='info'>Saint-Andre, P., &ldquo;Extensible Messaging and Presence Protocol (XMPP): Core,&rdquo; December&nbsp;2010.</span><span>)</span></a>, the XMPP Working Group decided to split the XMPP address format into a separate specification so as not to significantly delay publication of improved documentation for XMPP while awaiting the conclusion of work on updated handling of internationalized addresses.
+<p>Since the publication of RFC 3920, IDNA2003 has been superseded by IDNA2008 (see <a class='info' href='#IDNA-PROTO'>[IDNA&#8209;PROTO]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names in Applications (IDNA): Protocol,&rdquo; August&nbsp;2010.</span><span>)</span></a> and related documents), which is not based on stringprep.  Following the lead of the IDNA community, other technology communities that use stringprep have begun discussions about migrating away from stringprep toward more "modern" approaches.  The XMPP community is participating in those discussions (mostly within the PRECIS Working Group) in order to find a replacement for the Nodeprep and Resourceprep profiles of stringprep defined in RFC 3920.  Because all other aspects of revised documentation for XMPP have been incorporated into <a class='info' href='#XMPP'>[XMPP]<span> (</span><span class='info'>Saint-Andre, P., &ldquo;Extensible Messaging and Presence Protocol (XMPP): Core,&rdquo; December&nbsp;2010.</span><span>)</span></a>, the XMPP Working Group decided to temporarily split the XMPP address format into a separate document so as not to significantly delay publication of improved documentation for XMPP.  It is expected that this document will be obsoleted as soon as work on a new approach to preparation and comparison of internationalized addresses has been completed.
 </p>
-<p>Therefore, this specification provides corrected documentation of the XMPP address format using the internationalization technologies available in 2004 (when RFC 3920 was published), with the intent that this specification will be superseded as soon as work on a new approach to preparation and comparison of internationalized strings has been defined by the PRECIS Working Group and applied to the specific cases of XMPP localparts and resourceparts.  In the meantime, this document normatively references <a class='info' href='#IDNA2003'>[IDNA2003]<span> (</span><span class='info'>Faltstrom, P., Hoffman, P., and A. Costello, &ldquo;Internationalizing Domain Names in Applications (IDNA),&rdquo; March&nbsp;2003.</span><span>)</span></a> and <a class='info' href='#NAMEPREP'>[NAMEPREP]<span> (</span><span class='info'>Hoffman, P. and M. Blanchet, &ldquo;Nameprep: A Stringprep Profile for Internationalized Domain Names (IDN),&rdquo; March&nbsp;2003.</span><span>)</span></a>; XMPP software implementations are encouraged to begin migrating to IDNA2008 (see <a class='info' href='#IDNA-PROTO'>[IDNA&#8209;PROTO]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names in Applications (IDNA): Protocol,&rdquo; August&nbsp;2010.</span><span>)</span></a> and related documents) because it is nearly certain that the specification superseding this one will re-use IDNA2008.
+<p>Therefore, this specification provides corrected documentation of the XMPP address format using the internationalization technologies available in 2004 (when RFC 3920 was published).  Although this document normatively references <a class='info' href='#IDNA2003'>[IDNA2003]<span> (</span><span class='info'>Faltstrom, P., Hoffman, P., and A. Costello, &ldquo;Internationalizing Domain Names in Applications (IDNA),&rdquo; March&nbsp;2003.</span><span>)</span></a> and <a class='info' href='#NAMEPREP'>[NAMEPREP]<span> (</span><span class='info'>Hoffman, P. and M. Blanchet, &ldquo;Nameprep: A Stringprep Profile for Internationalized Domain Names (IDN),&rdquo; March&nbsp;2003.</span><span>)</span></a>, XMPP software implementations are encouraged to begin migrating to IDNA2008 (see <a class='info' href='#IDNA-PROTO'>[IDNA&#8209;PROTO]<span> (</span><span class='info'>Klensin, J., &ldquo;Internationalized Domain Names in Applications (IDNA): Protocol,&rdquo; August&nbsp;2010.</span><span>)</span></a> and related documents) because the specification that obsoletes this one will re-use IDNA2008 rather than IDNA2003.
 </p>
 <p>This document updates RFC 3920.
 </p>
@@ -307,7 +307,7 @@ Terminology</h3>
 
 <p>Many important terms used in this document are defined in <a class='info' href='#IDNA2003'>[IDNA2003]<span> (</span><span class='info'>Faltstrom, P., Hoffman, P., and A. Costello, &ldquo;Internationalizing Domain Names in Applications (IDNA),&rdquo; March&nbsp;2003.</span><span>)</span></a>, <a class='info' href='#STRINGPREP'>[STRINGPREP]<span> (</span><span class='info'>Hoffman, P. and M. Blanchet, &ldquo;Preparation of Internationalized Strings (&quot;stringprep&quot;),&rdquo; December&nbsp;2002.</span><span>)</span></a>, <a class='info' href='#UNICODE'>[UNICODE]<span> (</span><span class='info'>The Unicode Consortium, &ldquo;The Unicode Standard, Version 3.2.0,&rdquo; 2000.</span><span>)</span></a>, and <a class='info' href='#XMPP'>[XMPP]<span> (</span><span class='info'>Saint-Andre, P., &ldquo;Extensible Messaging and Presence Protocol (XMPP): Core,&rdquo; December&nbsp;2010.</span><span>)</span></a>.
 </p>
-<p>The keywords "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a class='info' href='#KEYWORDS'>[KEYWORDS]<span> (</span><span class='info'>Bradner, S., &ldquo;Key words for use in RFCs to Indicate Requirement Levels,&rdquo; March&nbsp;1997.</span><span>)</span></a>.
+<p>The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in RFC 2119 <a class='info' href='#KEYWORDS'>[KEYWORDS]<span> (</span><span class='info'>Bradner, S., &ldquo;Key words for use in RFCs to Indicate Requirement Levels,&rdquo; March&nbsp;1997.</span><span>)</span></a>.
 </p>
 <a name="addressing"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -781,7 +781,7 @@ The Unicode Standard, Version 3.2.0 is defined by The Unicode Standard, Version 
 <tr><td class="author-text" valign="top"><a name="UTF-8">[UTF-8]</a></td>
 <td class="author-text">Yergeau, F., &ldquo;<a href="http://tools.ietf.org/html/rfc3629">UTF-8, a transformation format of ISO 10646</a>,&rdquo; STD&nbsp;63, RFC&nbsp;3629, November&nbsp;2003 (<a href="ftp://ftp.isi.edu/in-notes/rfc3629.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="XMPP">[XMPP]</a></td>
-<td class="author-text">Saint-Andre, P., &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-xmpp-3920bis-20.txt">Extensible Messaging and Presence Protocol (XMPP): Core</a>,&rdquo; draft-ietf-xmpp-3920bis-20 (work in progress), December&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-xmpp-3920bis-20.txt">TXT</a>).</td></tr>
+<td class="author-text">Saint-Andre, P., &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-xmpp-3920bis-22.txt">Extensible Messaging and Presence Protocol (XMPP): Core</a>,&rdquo; draft-ietf-xmpp-3920bis-22 (work in progress), December&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-xmpp-3920bis-22.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
