draft-ietf-avtext-mixer-to-client-audio-level-05

--- a/draft-ietf-avtext-mixer-to-client-audio-level-05.html
+++ b/draft-ietf-avtext-mixer-to-client-audio-level-05.html
@@ -360,10 +360,11 @@
 <link href="#rfc.section.7" rel="Chapter" title="7 IANA Considerations">
 <link href="#rfc.section.8" rel="Chapter" title="8 Acknowledgments">
 <link href="#rfc.section.9" rel="Chapter" title="9 Changes From Earlier Versions">
-<link href="#rfc.section.9.1" rel="Chapter" title="9.1 Changes From Draft -03">
-<link href="#rfc.section.9.2" rel="Chapter" title="9.2 Changes From Draft -02">
-<link href="#rfc.section.9.3" rel="Chapter" title="9.3 Changes From Draft -01">
-<link href="#rfc.section.9.4" rel="Chapter" title="9.4 Changes From Draft -00">
+<link href="#rfc.section.9.1" rel="Chapter" title="9.1 Changes From Draft -04">
+<link href="#rfc.section.9.2" rel="Chapter" title="9.2 Changes From Draft -03">
+<link href="#rfc.section.9.3" rel="Chapter" title="9.3 Changes From Draft -02">
+<link href="#rfc.section.9.4" rel="Chapter" title="9.4 Changes From Draft -01">
+<link href="#rfc.section.9.5" rel="Chapter" title="9.5 Changes From Draft -00">
 <link href="#rfc.references" rel="Chapter" title="10 References">
 <link href="#rfc.references.1" rel="Chapter" title="10.1 Normative References">
 <link href="#rfc.references.2" rel="Chapter" title="10.2 Informative References">
@@ -403,7 +404,7 @@
 <td class="right">E. Marocco, Ed.</td>
 </tr>
 <tr>
-<td class="left">Expires: February 28, 2012</td>
+<td class="left">Expires: March 08, 2012</td>
 <td class="right">Telecom Italia</td>
 </tr>
 <tr>
@@ -416,7 +417,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">August 27, 2011</td>
+<td class="right">September 05, 2011</td>
 </tr>
 
     	
@@ -424,7 +425,7 @@
   </table>
 
   <p class="title">A Real-Time Transport Protocol (RTP) Header Extension for Mixer-to-Client Audio Level Indication <br />
-  <span class="filename">draft-ietf-avtext-mixer-to-client-audio-level-04</span></p>
+  <span class="filename">draft-ietf-avtext-mixer-to-client-audio-level-05</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes a mechanism for RTP-level mixers in audio conferences to deliver information about the audio level of individual participants. Such audio level indicators are transported in the same RTP packets as the audio data they pertain to.  </p>
@@ -432,7 +433,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 28, 2012.</p>
+<p>This Internet-Draft will expire on March 08, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -460,13 +461,15 @@
 </li>
 <li>9.   <a href="#rfc.section.9">Changes From Earlier Versions</a>
 </li>
-<li>9.1.   <a href="#rfc.section.9.1">Changes From Draft -03</a>
+<li>9.1.   <a href="#rfc.section.9.1">Changes From Draft -04</a>
 </li>
-<li>9.2.   <a href="#rfc.section.9.2">Changes From Draft -02</a>
+<li>9.2.   <a href="#rfc.section.9.2">Changes From Draft -03</a>
 </li>
-<li>9.3.   <a href="#rfc.section.9.3">Changes From Draft -01</a>
+<li>9.3.   <a href="#rfc.section.9.3">Changes From Draft -02</a>
 </li>
-<li>9.4.   <a href="#rfc.section.9.4">Changes From Draft -00</a>
+<li>9.4.   <a href="#rfc.section.9.4">Changes From Draft -01</a>
+</li>
+<li>9.5.   <a href="#rfc.section.9.5">Changes From Draft -00</a>
 </li>
 <li>10.   <a href="#rfc.references">References</a>
 </li>
@@ -581,6 +584,7 @@
 <pre>
   v=0
   o=alice 2890844526 2890844526 IN IP6 host.example.com
+  s=-
   c=IN IP6 host.example.com
   t=0 0
   m=audio 49170 RTP/AVP 0 4
@@ -591,9 +595,10 @@
   v=0
   i=A Seminar on the session description protocol
   o=conf-focus 2890844730 2890844730 IN IP6 focus.example.net
+  s=-
   c=IN IP6 focus.example.net
   t=0 0
-  m=audio 52543 RTP/AVP 0
+  m=audio 52544 RTP/AVP 0
   a=rtpmap:0 PCMU/8000
   a=extmap:1/sendonly urn:ietf:params:rtp-hdrext:csrc-audio-level
         </pre>
@@ -604,6 +609,7 @@
   v=0
   i=Un seminaire sur le protocole de description des sessions
   o=fr-focus 2890844730 2890844730 IN IP6 focus.fr.example.net
+  s=-
   c=IN IP6 focus.fr.example.net
   t=0 0
   m=audio 49170 RTP/AVP 0
@@ -613,9 +619,10 @@
   v=0
   i=A Seminar on the session description protocol
   o=us-focus 2890844526 2890844526 IN IP6 focus.us.example.net
+  s=-
   c=IN IP6 focus.us.example.net
   t=0 0
-  m=audio 52543 RTP/AVP 0
+  m=audio 52544 RTP/AVP 0
   a=rtpmap:0 PCMU/8000
   a=extmap:1/sendrecv urn:ietf:params:rtp-hdrext:csrc-audio-level
         </pre>
@@ -645,20 +652,27 @@
 <h1 id="rfc.section.8">
 <a href="#rfc.section.8">8.</a> Acknowledgments</h1>
 <p id="rfc.section.8.p.1">Lyubomir Marinov contributed level measurement and rendering code.  </p>
-<p id="rfc.section.8.p.2">Keith Drage, Roni Even, John Elwell, Kevin P. Fleming, Ingemar Johansson, Michael Ramalho, Magnus Westerlund and several others provided helpful feedback over the avt and avtext mailing lists.  </p>
+<p id="rfc.section.8.p.2">Keith Drage, Roni Even, Miguel A. Garcia, John Elwell, Kevin P. Fleming, Ingemar Johansson, Michael Ramalho, Magnus Westerlund and several others provided helpful feedback over the avt and avtext mailing lists.  </p>
 <p id="rfc.section.8.p.3">Jitsi's participation in this specification is funded by the NLnet Foundation.  </p>
 <h1 id="rfc.section.9">
 <a href="#rfc.section.9">9.</a> Changes From Earlier Versions</h1>
 <p id="rfc.section.9.p.1">Note to the RFC-Editor: please remove this section prior to publication as an RFC.  </p>
 <h1 id="rfc.section.9.1">
-<a href="#rfc.section.9.1">9.1.</a> Changes From Draft -03</h1>
+<a href="#rfc.section.9.1">9.1.</a> Changes From Draft -04</h1>
+<p></p>
+
+<ul><li>Fixed problems with missing "s=" attributes and odd RTP port numbers in the SDP examples.  </li></ul>
+
+<p> </p>
+<h1 id="rfc.section.9.2">
+<a href="#rfc.section.9.2">9.2.</a> Changes From Draft -03</h1>
 <p></p>
 
 <ul><li>Addressed editorial comments made on the mailing list.  </li></ul>
 
 <p> </p>
-<h1 id="rfc.section.9.2">
-<a href="#rfc.section.9.2">9.2.</a> Changes From Draft -02</h1>
+<h1 id="rfc.section.9.3">
+<a href="#rfc.section.9.3">9.3.</a> Changes From Draft -02</h1>
 <p></p>
 
 <ul>
@@ -671,8 +685,8 @@
 </ul>
 
 <p> </p>
-<h1 id="rfc.section.9.3">
-<a href="#rfc.section.9.3">9.3.</a> Changes From Draft -01</h1>
+<h1 id="rfc.section.9.4">
+<a href="#rfc.section.9.4">9.4.</a> Changes From Draft -01</h1>
 <p></p>
 
 <ul>
@@ -685,8 +699,8 @@
 </ul>
 
 <p> </p>
-<h1 id="rfc.section.9.4">
-<a href="#rfc.section.9.4">9.4.</a> Changes From Draft -00</h1>
+<h1 id="rfc.section.9.5">
+<a href="#rfc.section.9.5">9.5.</a> Changes From Draft -00</h1>
 <p></p>
 
 <ul>
