--- a/draft-ietf-6man-prefixlen-p2p-01.html
+++ b/draft-ietf-6man-prefixlen-p2p-01.html
@@ -156,7 +156,7 @@
 <tr><td class="header">6man</td><td class="header">M. Kohno</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Juniper Networks, Keio University</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">B. Nitzan</td></tr>
-<tr><td class="header">Expires: April 19, 2011</td><td class="header">Juniper Networks</td></tr>
+<tr><td class="header">Expires: June 19, 2011</td><td class="header">Juniper Networks</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">R. Bush</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Y. Matsuzaki</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Internet Initiative Japan</td></tr>
@@ -164,10 +164,10 @@
 <tr><td class="header">&nbsp;</td><td class="header">Google</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">T. Narten</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">IBM Corporation</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">October 16, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">December 16, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Using 127-bit IPv6 Prefixes on
-    Inter-Router Links<br />draft-ietf-6man-prefixlen-p2p-00.txt</h1>
+    Inter-Router Links<br />draft-ietf-6man-prefixlen-p2p-01.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -191,7 +191,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on April 19, 2011.</p>
+This Internet-Draft will expire on June 19, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -293,13 +293,12 @@ Scope Of This Memo</h3>
 </p>
 <p>For the purposes of this document, an inter-router point-to-point
       link is a link to which only two routers and no hosts are attached. This
-      may include Ethernet links which are configured to be point-to-point. In
-      such cases, there is no need to support Neighbor Discovery for address
-      resolution, and other general scenarios like the use of stateless
-      address autoconfiguration are not relevant.
-</p>
-<p>Links between a router and a host, or links to which both routers and
+      may include Ethernet links which are configured to be point-to-point.
+      Links between a router and a host, or links to which both routers and
       hosts are attached, are out of scope of this document.
+</p>
+<p>The recommendations in this document does not apply to link-local
+      address scope.
 </p>
 <a name="Problems"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -416,25 +415,27 @@ Other reasons</h3>
 Recommendations</h3>
 
 <p>Routers MUST support the assignment of /127 prefixes on
-      point-to-point inter-router links.
+      point-to-point inter-router links. Routers MUST disable subnet-router
+      anycast for the prefix when /127 prefixes are used.
 </p>
 <p>When assigning and using any /127 prefixes, the following
-      considerations apply.Some addresses have special meanings, in particular
-      addresses corresponding to reserved anycast addresses. When assigning
-      prefixes (and addresses) to links, care should be taken to ensure that
-      addresses reserved for such purposes aren't inadvertently assigned and
-      used as unicast addresses. Otherwise, nodes may receive packets that
-      they are not intended to receive. Specifically, assuming that a number
-      of point-to-point links will be numbered out of a single /64
-      prefix:</p>
+      considerations apply. Some addresses have special meanings, in
+      particular addresses corresponding to reserved anycast addresses. When
+      assigning prefixes (and addresses) to links, care should be taken to
+      ensure that addresses reserved for such purposes aren't inadvertently
+      assigned and used as unicast addresses. Otherwise, nodes may receive
+      packets that they are not intended to receive. Specifically, assuming
+      that a number of point-to-point links will be numbered out of a single
+      /64 prefix:</p>
 <blockquote class="text">
 <p>a) Addresses with all zeros in the rightmost 64 bits SHOULD NOT
           be assigned as unicast addresses, to avoid colliding with the
-          Subnet-Router anycast <a class='info' href='#RFC4291'>address.<span> (</span><span class='info'>Hinden, R. and S. Deering, &ldquo;IP Version 6 Addressing Architecture,&rdquo; February&nbsp;2006.</span><span>)</span></a> [RFC4291]
+          Subnet-Router anycast address <a class='info' href='#RFC4291'>[RFC4291]<span> (</span><span class='info'>Hinden, R. and S. Deering, &ldquo;IP Version 6 Addressing Architecture,&rdquo; February&nbsp;2006.</span><span>)</span></a>.
 </p>
 <p>b) Addresses in which the rightmost 64 bits are assigned the
-          highest 128 values SHOULD NOT be used as unicast addresses, to avoid
-          colliding with Reserved Subnet Anycast Addresses<a class='info' href='#RFC2526'>.<span> (</span><span class='info'>Johnson, J. and S. Deering, &ldquo;Reserved IPv6 Subnet Anycast Addresses,&rdquo; March&nbsp;1999.</span><span>)</span></a> [RFC2526]
+          highest 128 values, (i.e., ffff:ffff:ffff:ff7f to
+          ffff:ffff:ffff:ffff), SHOULD NOT be used as unicast addresses to
+          avoid colliding with Reserved Subnet Anycast Addresses <a class='info' href='#RFC2526'>[RFC2526]<span> (</span><span class='info'>Johnson, J. and S. Deering, &ldquo;Reserved IPv6 Subnet Anycast Addresses,&rdquo; March&nbsp;1999.</span><span>)</span></a>.
 </p>
 </blockquote>
 
@@ -443,7 +444,8 @@ Recommendations</h3>
 <a name="rfc.section.7"></a><h3>7.&nbsp;
 Security Considerations</h3>
 
-<p>Section 5.1 and 5.2 discuss about seurity related issues.
+<p>This document does not have inherent security considerations. It does
+      discuss security related issues and proposes a solution to them.
 </p>
 <a name="IANAConsiderations"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
